# liboffs

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  openssl.supp
.devcontainer/: Dockerfile  devcontainer.json
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  ElasticBloomFilter.md  Investigate.md  Meridian.md  PRODUCTION_BLOCKERS.md  Quasar.md  STYLE_GUIDE.md  Self Organizing P2P Social Networks.md  concurrency-pass.md  liboffs-audit-report.md
docs/superpowers/: Network Design.md
examples/: CMakeLists.txt
examples/off_client/: README.md  pubspec.yaml
examples/off_client/lib/: app.dart  main.dart
examples/off_client/lib/screens/: configuration_screen.dart  connect_screen.dart  export_screen.dart  import_screen.dart
examples/off_client/lib/services/: base58.dart  file_download.dart  file_download_io.dart  file_download_stub.dart  file_download_web.dart  ofd.dart  off_api.dart  recycler_resolver.dart
examples/off_client/test/: off_api_test.dart  recycler_resolver_test.dart
examples/off_server/: main.c
liboffs/BlockCache/: Fibonacci.pony
packaging/macos/: com.offs.daemon.plist  postinstall  preinstall
packaging/windows/: offs.wxl  offs.wxs
scripts/: collect-release.sh  msvc_build.bat  msvc_build_offs.bat  msvc_build_offs_ca.bat  msvc_build_offs_relay.bat  msvc_build_test_ofd.bat  msvc_build_test_offs_ca.bat  msvc_build_test_peer.bat  msvc_build_test_version.bat  msvc_build_testliboffs.bat  msvc_configure.bat  release.sh  vcpkg_install_openssl.bat
src/Actor/: actor.c  actor.h  message.h  message_queue.c  message_queue.h  pool.c  pool.h
src/BlockCache/: block.c  block.h  block_cache.c  block_cache.h  fibonacci.c  fibonacci.h  frand.c  frand.h  index.c  index.h  section.c  section.h  sections.c  sections.h  wal.c  wal.h
src/Bloom/: attenuated_bloom_filter.c  attenuated_bloom_filter.h  bitset.c  bitset.h  bloom_filter.c  bloom_filter.h  elastic_bloom_filter.c  elastic_bloom_filter.h
src/Buffer/: buffer.c  buffer.h
src/ClientAPI/: block_handlers.c  block_handlers.h  client_api_transport.h  client_api_wire.c  client_api_wire.h  config_handlers.c  config_handlers.h  health_handler.c  health_handler.h  peer_handlers.c  peer_handlers.h  update_status_handler.c  update_status_handler.h
src/Configuration/: config.c  config.h  config_json.c  config_json.h  config_pending.c  config_pending.h
src/HTTP/: cors.c  http_connection.c  http_connection.h  http_request.c  http_request.h  http_response.c  http_response.h  http_route.c  http_route.h  http_server.c  http_server.h  off_routes.c  off_routes.h
src/Metrics/: metrics.c  metrics.h
src/Network/: authority.c  authority.h  closest_nodes.c  closest_nodes.h  conn_state.c  conn_state.h  connection_manager.c  connection_manager.h  eabf.c  eabf.h  find_block.c  find_block.h  gossip.c  gossip.h  hebbian.c  hebbian.h  hebbian_config.c  hebbian_config.h  latency_cache.c  latency_cache.h  mdns.c  mdns.h  measure_nodes.c  measure_nodes.h  message_log.c  message_log.h  msquic_singleton.c  msquic_singleton.h  nat_detect.c  nat_detect.h  net_node.c  net_node.h  network.c  network.h  node_id.c  node_id.h  peer_connection.c  peer_connection.h  peer_info.c  peer_info.h  (+36 more)
src/Network/Relay/: CMakeLists.txt  relay_server.c  relay_server.h  relay_server_main.c
src/Node/: node.c  node.h
src/OFFStreams/: block_recipe.c  block_recipe.h  ofd.c  ofd.h  ofd_cache.c  ofd_cache.h  off_url.c  off_url.h  ori.c  ori.h  readable_descriptor.c  readable_descriptor.h  readable_off_stream.c  readable_off_stream.h  tuple.c  tuple.h  tuple_cache.c  tuple_cache.h  writeable_descriptor.c  writeable_descriptor.h  writeable_off_stream.c  writeable_off_stream.h
src/Platform/: CMakeLists.txt  platform.h  platform_compiler.h  platform_file.c  platform_file.h  platform_internal.h  platform_local.c  platform_local.h  platform_posix_compat.c  platform_posix_compat.h  platform_process.c  platform_process.h  platform_random.c  platform_random.h  platform_regex_compat.h  platform_socket.c  platform_socket.h  platform_socket_internal.h  platform_socket_watcher.c  platform_thread.c  platform_thread.h  platform_time.c  platform_time.h
src/RefCounter/: refcounter.c  refcounter.h  refcounter.p.h
src/Scheduler/: deque.c  deque.h  scheduler.c  scheduler.h
src/Service/: service.h  service_linux.c  service_windows.c
src/Streams/: file-stream.c  file-stream.h  stream.h  streams.c
src/Time/: debouncer.c  debouncer.h  ticker.c  ticker.h  wheel.c  wheel.h
src/Timer/: timer_actor.c  timer_actor.h
src/Update/: update_actor.c  update_actor.h  update_check.c  update_check.h  update_download.c  update_download.h  update_stage.c  update_stage.h
src/Updater/: updater_main.c
src/Util/: allocator.c  allocator.h  atomic_compat.h  base58.c  base58.h  bcrypt.c  bcrypt.h  error.c  error.h  get_dir.c  get_dir.h  hash.c  hash.h  log.c  log.h  mkdir_p.c  mkdir_p.h  path_join.h  portable_endian.h  rm_rf.c  rm_rf.h  threadding.c  threadding.h  util.c  util.h  validation.c  validation.h
test/: CMakeLists.txt  test_actor.cpp  test_auth_middleware.cpp  test_auth_wire.cpp  test_bcrypt.cpp  test_block.cpp  test_block_cache.cpp  test_block_cache_api.cpp  test_block_recipe.cpp  test_buffer.cpp  test_client_api_wire_config.cpp  test_config_json.cpp  test_config_validate.cpp  test_conn_state.cpp  test_control_protocol.h  test_crash_catch.h  test_deque.cpp  test_file_stream.cpp  test_file_transfer_integration.cpp  test_health_handler.cpp  test_health_http.cpp  test_health_wire.cpp  test_http_server.cpp  test_http_server_ssl.cpp  test_index.cpp  test_large_file_upload.cpp  test_main.cpp  test_message_queue.cpp  test_nat_detect.cpp  test_network.cpp  test_node_main.c  test_ofd.cpp  test_ofd_cache.cpp  test_off_routes.cpp  test_off_stream_integration.cpp  test_off_url.cpp  test_offs_ca.cpp  test_offs_client.cpp  test_offs_client_integration.cpp  test_peer_info.c  (+36 more)
test/certs/: ca_cert.pem  ca_key.pem  leaf_cert.pem  leaf_key.pem  other_ca_cert.pem  other_ca_key.pem
tools/offs-ca/: CMakeLists.txt  ca_ops.c  ca_ops.h  main.c
(+132 files in other folders)
