project(examples C CXX)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

# off_server: standalone C HTTP server
add_executable(off_server off_server/main.c)
add_dependencies(off_server cbor)
add_dependencies(off_server offs)
add_dependencies(off_server blake3)
add_dependencies(off_server http-parser)
target_link_libraries(off_server PRIVATE offs)
target_link_libraries(off_server PRIVATE blake3)
target_link_libraries(off_server PRIVATE hashmap)
target_link_libraries(off_server PRIVATE http-parser)
target_link_libraries(off_server PUBLIC cbor)
target_link_libraries(off_server PRIVATE poll-dancer)
target_link_libraries(off_server PRIVATE ${OPENSSL_LIBRARIES})
target_link_libraries(off_server PRIVATE pthread)
target_link_libraries(off_server PRIVATE m)
target_include_directories(off_server PUBLIC ${C_INC})
target_include_directories(off_server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_include_directories(off_server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../deps/http-parser)
target_include_directories(off_server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../deps/cJSON)